--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -64,7 +64,7 @@
         <div class="container-cards">
             <!-- CARD 1 -->
             <div class="card" style="width: 18rem;">
-                <img src="../img/casa.p.jpg" class="card-img-top" alt="...">
+                <img src="../img/casa.p.jpg" class="card-img-top" alt="casa-moderna">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -72,7 +72,7 @@
 
             <!-- CARD 2 -->
             <div class="card" style="width: 18rem;">
-                <img src="../img/casap1.jpg" class="card-img-top" alt="...">
+                <img src="../img/casap1.jpg" class="card-img-top" alt="casa-tradicional">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -80,7 +80,7 @@
 
             <!-- CARD 3 -->
             <div class="card" style="width: 18rem;">
-                <img src="../img/casap2.jpg" class="card-img-top" alt="...">
+                <img src="../img/casap2.jpg" class="card-img-top" alt="casa-cabaña">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -88,7 +88,7 @@
 
             <!-- CARD 4 -->
             <div class="card" style="width: 18rem;">
-                <img src="../img/casa2.jpg" class="card-img-top" alt="...">
+                <img src="../img/casa2.jpg" class="card-img-top" alt="casa-moderna">
                 <div class="card-body">
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -113,7 +113,7 @@
         <div class="container-cards">
             <!-- CARD 1 -->
             <div class="card" style="width: 18rem;">
-                <img src="../img/edificiop.jpg" class="card-img-top" alt="...">
+                <img src="../img/edificiop.jpg" class="card-img-top" alt="edificio-departamentos">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -121,7 +121,7 @@
 
             <!-- CARD 2 -->
             <div class="card" style="width: 18rem;">
-                <img src="../img/edificiochi10.jpg" class="card-img-top" alt="...">
+                <img src="../img/edificiochi10.jpg" class="card-img-top" alt="edificio-empresa">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -129,7 +129,7 @@
 
             <!-- CARD 3 -->
             <div class="card" style="width: 18rem;">
-                <img src="../img/edificio3.jpg" class="card-img-top" alt="...">
+                <img src="../img/edificio3.jpg" class="card-img-top" alt="edificio-departamentos">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -137,7 +137,7 @@
 
             <!-- CARD 4 -->
             <div class="card" style="width: 18rem;">
-                <img src="../img/casap3.jpg" class="card-img-top" alt="...">
+                <img src="../img/casap3.jpg" class="card-img-top" alt="edificio-departamentos">
                 <div class="card-body">
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -160,7 +160,7 @@
         <div class="container-cards">
             <!-- CARD 1 -->
             <div class="card" style="width: 18rem;">
-                <img src="../img/oficina5.jpg" class="card-img-top" alt="...">
+                <img src="../img/oficina5.jpg" class="card-img-top" alt="oficina-interior">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -168,7 +168,7 @@
 
             <!-- CARD 2 -->
             <div class="card" style="width: 18rem;">
-                <img src="../img/oficina4.jpg" class="card-img-top" alt="...">
+                <img src="../img/oficina4.jpg" class="card-img-top" alt="oficina-interior">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
