subiendo cambios seo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,7 +52,7 @@
     <section >
         <h1 class="titulo-cont">
             Contacto <br>
-            <small class="text-muted">Queremos saber de vos</small>
+            <small style="color: rgba(237, 242, 251, 0.689);" class="text-muted">Queremos saber de vos</small>
         </h1>
     </section>
 
