--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,7 +14,7 @@
 
     <!-- link a css -->
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Nosotros</title>
+    <title>Nosotros - ANDES Estudio</title>
 </head>
 
 <body>
@@ -52,7 +52,7 @@
     <section >
         <h1 class="titulo-nos">
             Sobre nosotros <br>
-            <small class="text-muted">Mucho más que Arquitectura</small>
+            <small style="color: rgba(237, 242, 251, 0.689);" class="text-muted">Mucho más que Arquitectura</small>
         </h1>
     </section>
 
@@ -71,7 +71,7 @@
 
           <div class="nos-intro">
              <div class="nos-texto">
-                 <p>Somos un grupo dedicado de arquitectos apasionados por transformar sueños en realidad. Con una comprensión profunda de los principios del diseño, las complejidades de la ingeniería y el arte de crear espacios, nos especializamos en visualizar y dar forma a entornos que inspiran, cautivan y funcionan a la perfección.</p>  
+                 <p> <strong>Somos un grupo dedicado de arquitectos</strong> apasionados por transformar sueños en realidad. Con una comprensión profunda de los principios del diseño, las complejidades de la ingeniería y el arte de crear espacios, nos especializamos en visualizar y dar forma a entornos que inspiran, cautivan y funcionan a la perfección.</p>  
 
                  <p> Nuestro enfoque colaborativo, impulsado por un compromiso con la sostenibilidad y la excelencia, nos permite crear espacios armoniosos que reflejan tanto las aspiraciones de nuestros clientes como las necesidades del mundo moderno.</p> 
 
