--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- link a css -->
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Proyectos</title>
+    <title>Proyectos - ANDES Estudio</title>
 </head>
 
 <body>
@@ -52,7 +52,7 @@
     <section >
         <h1 class="titulo-proy">
             Proyectos <br>
-            <small class="text-muted">Nuestro trabajo</small>
+            <small style="color: rgba(237, 242, 251, 0.689);" class="text-muted">Nuestro trabajo</small>
         </h1>
     </section>
 
